# 3d_mobile

AndroidProject/ThirdPartyTest/: settings.gradle
AndroidProject/ThirdPartyTest/app/: build.gradle
AndroidProject/ThirdPartyTest/app/libs/include/openssl/: opensslconf.h
AndroidProject/ThirdPartyTest/app/src/androidTest/java/com/example/thirdpartytest/: ExampleInstrumentedTest.java
AndroidProject/ThirdPartyTest/app/src/main/: AndroidManifest.xml
AndroidProject/ThirdPartyTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidProject/ThirdPartyTest/app/src/main/java/com/example/thirdpartytest/: MainActivity.java
AndroidProject/ThirdPartyTest/app/src/main/res/values/: strings.xml  themes.xml
AndroidProject/ThirdPartyTest/app/src/main/res/values-night/: themes.xml
AndroidProject/ThirdPartyTest/app/src/test/java/com/example/thirdpartytest/: ExampleUnitTest.java
AndroidProject/ThirdPartyTest/gradle/wrapper/: gradle-wrapper.properties
